# Trading

./: .env.example  .gitignore  README.md  backtest_hybrid.py  backtest_value_area.py  create_daily_data.py  create_weekly_data.py  dashboard.py  fetch_holdings.py  pyproject.toml  requirements.txt  run_all_backtests.py  run_backtest.py  simulate_portfolio.py  strategies.py  test_fetch_nifty.py
backtester/: Cargo.toml
backtester/src/: composite.rs  data.rs  main.rs  report.rs  strategy.rs  xirr.rs
dashboard/: app.js  index.html  style.css
data/nifty_200_15min/: 360ONE_15min.csv  ABB_15min.csv  ABCAPITAL_15min.csv  ACC_15min.csv  ADANIENSOL_15min.csv  ADANIENT_15min.csv  ADANIGREEN_15min.csv  ADANIPORTS_15min.csv  ADANIPOWER_15min.csv  ALKEM_15min.csv  AMBUJACEM_15min.csv  APLAPOLLO_15min.csv  APOLLOHOSP_15min.csv  ASHOKLEY_15min.csv  ASIANPAINT_15min.csv  ASTRAL_15min.csv  ATGL_15min.csv  AUBANK_15min.csv  AUROPHARMA_15min.csv  AXISBANK_15min.csv  BAJAJ-AUTO_15min.csv  BAJAJFINSV_15min.csv  BAJAJHFL_15min.csv  BAJAJHLDNG_15min.csv  BAJFINANCE_15min.csv  BANKBARODA_15min.csv  BANKINDIA_15min.csv  BDL_15min.csv  BEL_15min.csv  BHARATFORG_15min.csv  BHARTIARTL_15min.csv  BHARTIHEXA_15min.csv  BHEL_15min.csv  BIOCON_15min.csv  BLUESTARCO_15min.csv  BOSCHLTD_15min.csv  BPCL_15min.csv  BSE_15min.csv  (+158 more)
rust_mp/: Cargo.toml  pyproject.toml
scripts/: dashboard.py  fetch_history.py  fetch_nifty_200_data.py  fetch_nifty_200_data_2min.py  fetch_nifty_200_data_3min.py  get_nifty_200.py  resample_nifty_data.py  run_all_backtests.py  run_backtest.py
tests/: test_fetch_nifty.py
(+191 files in other folders)
